--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>维基百科 - 示例页面</title>
+    <title>班级百科</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Lato', 'Helvetica', 'Arial', sans-serif;
@@ -187,30 +187,33 @@
         <div class="header-content">
             <a href="#" class="logo">维基百科</a>
             <div class="search-bar">
-                <input type="text" placeholder="搜索维基百科">
-                <button>搜索</button>
             </div>
         </div>
     </div>
 
     <div class="container">
-        <h1>示例主题</h1>
+        <h1>刘（教师）</h1>
         
         <div class="infobox">
-            <h3>示例主题</h3>
+            <h3>刘（教师）</h3>
             <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Crect width='200' height='200' fill='%23ddd'/%3E%3Ctext x='50%25' y='50%25' font-size='18' text-anchor='middle' alignment-baseline='middle' font-family='Arial, sans-serif' fill='%23555555'%3E示例图片%3C/text%3E%3C/svg%3E" alt="示例图片">
             <table>
                 <tr>
-                    <th>属性1</th>
-                    <td>值1</td>
+                    <th>别称</th>
+                    <td>哲哲、六折、元宝哥哥</td>
                 </tr>
                 <tr>
-                    <th>属性2</th>
-                    <td>值2</td>
+                    <th>出生</th>
+                    <td>未知</td>
                 </tr>
                 <tr>
-                    <th>属性3</th>
-                    <td>值3</td>
+                    <th>职业</th>
+                    <td>教师</td>
+                </tr>
+                <tr>
+                    <th>担任职位</th>
+                    <td>初2025届十二班物理老师（2023年-）
+初2025届其余四个班物理老师（2023年-）</td>
                 </tr>
             </table>
         </div>
