--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         
         <div class="infobox">
             <h3>刘（教师）</h3>
-            <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200'%3E%3Crect width='200' height='200' fill='%23ddd'/%3E%3Ctext x='50%25' y='50%25' font-size='18' text-anchor='middle' alignment-baseline='middle' font-family='Arial, sans-serif' fill='%23555555'%3E示例图片%3C/text%3E%3C/svg%3E" alt="示例图片">
+            <img src="https://sm.ms/image/B2Q3u6PeimvbCI5" target="_blank"><img src="https://s2.loli.net/2024/08/15/B2Q3u6PeimvbCI5.jpg">
             <table>
                 <tr>
                     <th>别称</th>
@@ -212,7 +212,7 @@
                 </tr>
                 <tr>
                     <th>担任职位</th>
-                    <td>初2025届十二班物理老师（2023年-）
+                    <td>初2025届<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a >物理老师（2023年-）
 初2025届其余四个班物理老师（2023年-）</td>
                 </tr>
             </table>
