--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         
         <div class="infobox">
             <h3>刘（教师）</h3>
-            <img src="https://sm.ms/image/B2Q3u6PeimvbCI5" target="_blank"><img src="https://s2.loli.net/2024/08/15/B2Q3u6PeimvbCI5.jpg">
+            <img src="https://sm.ms/image/B2Q3u6PeimvbCI5" target="_blank"><img src="https://sm.ms/image/ASPp6OwyRoT8mjr">
             <table>
                 <tr>
                     <th>别称</th>
