--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>班级百科</title>
+    <title>班级百科 — 刘（教师）</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Lato', 'Helvetica', 'Arial', sans-serif;
@@ -185,7 +185,7 @@
     <!-- 页面内容保持不变 -->
     <div class="header">
         <div class="header-content">
-            <a href="#" class="logo">维基百科</a>
+            <a href="#" class="logo">12班班级百科</a>
             <div class="search-bar">
             </div>
         </div>
