--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>班级百科 — 刘（教师）</title>
+    <title>班级百科-刘（教师）</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Lato', 'Helvetica', 'Arial', sans-serif;
@@ -212,7 +212,7 @@
                 </tr>
                 <tr>
                     <th>担任职位</th>
-                    <td>初2025届<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a >物理老师（2023年-）
+                    <td>初2025届<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>物理老师（2023年-）
 初2025届其余四个班物理老师（2023年-）</td>
                 </tr>
             </table>
