--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </table>
         </div>
 
-        <p>这是一个关于示例主题的简短介绍。它概述了主题的重要性和基本信息。本文将详细探讨该主题的各个方面，包括其历史、特征和影响。</p>
+        <p>六折（网名：元宝哥哥），姓刘。在物理考试的试题也被称作“哲哲”。LNBS教职工。从2023年开始担任<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>的物理老师。同时还任其他四个班的物理老师。刘对教育有自己的见解，善于理解学生，以及构建“物理思维”。</p>
 
         <div class="toc">
             <h2>目录</h2>
