--- a/index.html
+++ b/index.html
@@ -240,13 +240,13 @@
 
         <h3 id="section1-1">1.1 任教十二班</h3>
         <p></p>
-        <p>刘于2023年（第二学期）来到十二班，其称BS是他的母校，对学生花招的了解十分透彻。在开学的自我介绍中，刘幽默地讲历届学生常称呼他为其名字的谐音"六折"。  
+        <p>刘于2023年（第二学期）来到<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>，其称BS是他的母校，对学生花招的了解十分透彻。在开学的自我介绍中，刘幽默地讲历届学生常称呼他为其名字的谐音"六折"。  
 </p>
         <p></p>
         <p>刘十分厌恶学生在自己课堂上睡觉或讲话的行为。秦（同学）在一次课堂上与周边的同学讲话，被刘直喊到：“讲啥呢？”易（同学）还在学校时，近乎每一节物理课都会睡觉。总是被刘点名批评到：“易，起来吧！”
 </p>
         <p></p>
-        <p>刘有时十分多疑。在一次晚自习质疑有多数同学抄作业（原因是相较于他任教的其他班，十二班作业的正确率高得令人怀疑），从此在与彭和物理科代表的合作下，采用了晚间交作业制即每天的物理作业（除了周末）必须当天完成，并且在晚饭或晚自习时间完成作业的提交。这种制度的缺点是会有漏交的学生但来不及登记。刘的多疑性还表现在一次刘亲自出题的小考中，秦（同学）、赵（同学）、陶（同学）和温（同学）选择题全对且此次成绩相较于平时成绩过于突出，被怀疑是从其他班拿到试题答案。因此四位学生被点名批评。
+        <p>刘有时十分多疑。在一次晚自习质疑有多数同学抄作业（原因是相较于他任教的其他班，<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>作业的正确率高得令人怀疑），从此在与<a href="https://penny-github-io-7sf.pages.dev/">彭</a>和物理科代表的合作下，采用了晚间交作业制即每天的物理作业（除了周末）必须当天完成，并且在晚饭或晚自习时间完成作业的提交。这种制度的缺点是会有漏交的学生但来不及登记。刘的多疑性还表现在一次刘亲自出题的小考中，秦（同学）、赵（同学）、陶（同学）和温（同学）选择题全对且此次成绩相较于平时成绩过于突出，被怀疑是从其他班拿到试题答案。因此四位学生被点名批评。
 </p>
         <p></p>
         <p>刘有时也十分幽默，在课堂上偶尔会开些玩笑引得全班哄堂大笑。陈（同学）每节物理课都会调坐位到最前排 。刘经常和陈（同学）互动，多数是搞笑（如陈幽默风趣的提问和跳舞），有时刘也会生气（陈同学破坏课堂秩序）。刘的幽默感还体现在一次讲光学的课堂PPT里的视频，用蔡徐坤代替光线完美诠释了光线和凹透镜之前的关系。
@@ -254,7 +254,7 @@
         <p></p>
         <p>刘惩罚学生的手段普遍分为两类：①罚站，通常是在课堂上用来阻断睡觉或讲话的学生。②罚抄，通常是用来惩罚重点知识有出错或作业漏写的学</p>
         <p></p>
-        <p>在刘任教十二班一段时间后，拖堂的次数与时长成倍增加，引起学生广泛不满。</p>
+        <p>在刘任教<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>一段时间后，拖堂的次数与时长成倍增加，引起学生广泛不满。</p>
 
         <h3 id="section1-2">1.2 年级影响</h3>
         <p></p>
