--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
         <h2 id="section2">2. 争议</h2>
         <p></p>
-        <p>刘的一次拖堂，短则四五分钟，长则一二分钟。有观点认为刘的长期拖堂侵犯了学生的课间休息，这样的教学方式不仅下课时间被占用了，学生的学习热情也被大大降低了。
+        <p>刘的一次拖堂，短则四五分钟，长则一二十分钟。有观点认为刘的长期拖堂侵犯了学生的课间休息，这样的教学方式不仅下课时间被占用了，学生的学习热情也被大大降低了。
 </p>
         <p></p>
         <p>还有一些观点认为，刘讲课过快，经常发生抄笔记却跟不上课堂节奏的情况。这导致了互动的学生偏少，上课气氛不活跃。
