--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
             margin: 0 auto;
             max-width: 250px;
         }
+        .hatnote {
+            font-style: italic;
+            padding: 10px;
+            background-color: #f8f9fa;
+            border: 1px solid #eaecf0;
+            margin-bottom: 20px;
+                }
         .footer {
             background-color: #f8f9fa;
             border-top: 1px solid #a2a9b1;
@@ -193,6 +200,9 @@
 
     <div class="container">
         <h1>刘（教师）</h1>
+            <div class="hatnote">
+        此页面不是关于……。如果您要找的是……，请参见<a href=" ">其他页面</a >。
+            </div>
         
         <div class="infobox">
             <h3>刘（教师）</h3>
