--- a/index.html
+++ b/index.html
@@ -201,12 +201,9 @@
     <div class="container">
         <h1>刘（教师）</h1>
             <div class="hatnote">
-        此页面不是关于刘（学生）。如果您要找的是刘学生，请参见<a href=" ">其他页面</a >。
-            </div>
-        <div class="hatnote">
         本条目如无特别标注“刘”都指代“刘（教师）”，而非“刘（学生）”
-</a >。
-             </div>
+。如果您要找的是刘学生，请参见<a href=" ">其他页面</a >。
+            </div>
         <div class="infobox">
             <h3>刘（教师）</h3>
             <img src="https://s2.loli.net/2024/08/15/ASPp6OwyRoT8mjr.jpg">
