--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
 
 </p>
         <p></p>
-        <p>刘惩罚学生的手段普遍分为两类：/n
+        <p>刘惩罚学生的手段普遍分为两类：
 罚站，通常是在课堂上用来阻断睡觉或讲话的学生；
-/n罚抄，通常是用来惩罚重点知识有出错或作业漏写的学；
+罚抄，通常是用来惩罚重点知识有出错或作业漏写的学；
 </p>
         <p></p>
         <p>在刘任教<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>一段时间后，拖堂的次数与时长成倍增加，引起学生广泛不满。一般为三到十五分钟。
