--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 </p>
         <p></p>
-        <p>刘十分厌恶学生在其课堂上睡觉或讲话。秦（学生）在一次刘的课堂上与周边的同学讲话，被刘警告：“讲啥呢？”。易（学生）还在学校进行学业时，近乎每一节物理课都会睡觉，因而被刘点名批评：“易（其全称），站起来吧！”（要求其起立罚站）
+        <p>刘十分厌恶学生在其课堂上睡觉或讲话。秦P（学生）在一次刘的课堂上与周边的同学讲话，被刘警告：“讲啥呢？”。易K（学生）还在学校进行学业时，近乎每一节物理课都会睡觉，因而被刘点名批评：“易K（其全称），站起来吧！”（要求其起立罚站）
 
 </p>
         <p></p>
@@ -262,7 +262,7 @@
 
 </p>
         <p></p>
-        <p>刘的多疑性还表现在一次刘亲自出题的小型考试中，秦（学生）、赵（学生）、陶（学生）和温（学生）选择题全对且此次成绩相较于平时成绩过高，被怀疑是其他班同学向其泄题导致，四位学生在这次事件后被点名批评。
+        <p>刘的多疑性还表现在一次刘亲自出题的小型考试中，秦P（学生）、赵H（学生）、陶Y（学生）和温L（学生）选择题全对且此次成绩相较于平时成绩过高，被怀疑是其他班同学向其泄题导致，四位学生在这次事件后被点名批评。
 </p>
         <p></p>
 
