--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <h1>刘（教师）</h1>
             <div class="hatnote">
         本条目如无特别标注“刘”都指代“刘（教师）”，而非“刘（学生）”
-。如果您要找的是刘学生，请参见<a href=" ">其他页面</a >。
+。如果您要找的是刘学生，请参见<a href=" ">还在制作</a >。
             </div>
         <div class="infobox">
             <h3>刘（教师）</h3>
@@ -210,7 +210,7 @@
             <table>
                 <tr>
                     <th>别称</th>
-                    <td>哲哲、六折、元宝哥哥</td>
+                    <td>哲哲、六折、原宝哥哥</td>
                 </tr>
                 <tr>
                     <th>出生</th>
@@ -228,7 +228,7 @@
             </table>
         </div>
 
-        <p>六折（网名：元宝哥哥），姓刘。在物理考试的试题也被称作“哲哲”。LNBS教职工。从2023年开始担任<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>的物理老师。同时还任其他四个班的物理老师。刘对教育有自己的见解，善于理解学生，以及构建“物理思维”。</p>
+        <p>六折（网名：原宝哥哥），姓刘。在物理考试的试题也被称作“哲哲”。LNBS教职工。从2023年开始担任<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>的物理老师。同时还任其他四个班的物理老师。刘对教育有自己的见解，善于理解学生，以及构建“物理思维”。</p>
 
         <div class="toc">
             <h2>目录</h2>
