--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
 </p>
         <p></p>
-        <p>刘十分厌恶学生在其课堂上睡觉或讲话。秦P（学生）在一次刘的课堂上与周边的同学讲话，被刘警告：“讲啥呢？”。易K（学生）还在学校进行学业时，近乎每一节物理课都会睡觉，因而被刘点名批评：“易K（其全称），站起来吧！”（要求其起立罚站）
+        <p>刘十分厌恶学生在其课堂上睡觉或讲话。秦P（学生）在一次刘的课堂上与周边的同学讲话，被刘警告：“讲啥呢？”。易K（学生）还在学校进行学业时，近乎每一节物理课都会睡觉，因而被刘点名批评：“易K（其全称），站起来吧！”（要求其起立罚站，该句被列入班级流行语）
 
 </p>
         <p></p>
