--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
 </p>
         <p></p>
-        <p>刘有时会有敏锐的洞察力（多疑），但准确度不确定。在一次晚自习质疑有多数同学抄作业（因相较于他任教的其他班，<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>当天的作业正确率过高）。此事件后刘与<a href="https://penny-github-io-7sf.pages.dev/">彭</a>和物理科代表的合作下，改用晚间交作业制以避免此现象。即每天物理作业（除周末外）当天完成，并在晚饭或晚自习时间完成作业提交。但也会有漏交的学生但未有充足时间登记。
+        <p>刘有时会有敏锐的洞察力（多疑），但准确度不确定。在一次晚自习质疑有多数同学<a href="https://chaozuoye-github-io.pages.dev/">抄物理作业</a>（因相较于他任教的其他班，<a href="https://shierban-github-io.pages.dev/" target="_blank">十二班</a>当天的作业正确率过高）。此事件后刘与<a href="https://penny-github-io-7sf.pages.dev/">彭</a>和物理科代表的合作下，改用晚间交作业制以避免此现象。即每天物理作业（除周末外）当天完成，并在晚饭或晚自习时间完成作业提交。但也会有漏交的学生但未有充足时间登记。
 
 </p>
         <p></p>
