--- a/index.html
+++ b/index.html
@@ -185,6 +185,12 @@
             .search-bar {
                 margin-top: 10px;
             }
+                .icon-caption {
+            font-size: 14px;
+            color: #54595d;
+            margin-bottom: 4px;
+            text-align: center; /* 添加这行来使文字居中 */
+                }
         }
     </style>
 </head>
@@ -207,6 +213,7 @@
         <div class="infobox">
             <h3>刘（教师）</h3>
             <img src="https://s2.loli.net/2024/08/15/ASPp6OwyRoT8mjr.jpg">
+            <div class="icon-caption">“今天的作业，一本。”</div>
             <table>
                 <tr>
                     <th>别称</th>
