--- a/index.html
+++ b/index.html
@@ -191,6 +191,12 @@
             margin-bottom: 4px;
             text-align: center; /* 添加这行来使文字居中 */
                 }
+                         .icon {
+            height: 1em;
+            width: auto;
+            vertical-align: text-top;
+            margin-right: 4px;
+                         }
         }
     </style>
 </head>
@@ -211,7 +217,7 @@
 。如果您要找的是刘学生，请参见<a href=" ">还在制作</a >。
             </div>
         <div class="infobox">
-            <h3>刘（教师）</h3>
+            <h3><img src="https://s2.loli.net/2024/11/05/pxQ6A73ikoCDOrn.gif" alt="LZ" class="icon">刘（教师）</h3>
             <img src="https://s2.loli.net/2024/08/15/ASPp6OwyRoT8mjr.jpg">
             <div class="icon-caption">“今天的作业，一本。”</div>
             <table>
